# rag-internvl-poc

./: .env.example  .gitignore  README.md  WARP.md  docker-compose.yml  pyproject.toml
data/: .gitkeep
docker/: init.sql
src/rag_internvl_poc/: __init__.py  cli.py  db.py  embeddings.py  ingest.py  model_internvl.py  rag.py  retrieve.py
src/rag_internvl_poc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
